# binance-prometheus

./: .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: publish.yml
src/binance_exporter/: __main__.py  cli.py  client.py  collector.py  config.py
tests/: test_client.py  test_collector.py  test_config.py  test_liquidation_price.py
